--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "moment": "^2.27.0",
         "normalize.css": "^8.0.1",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
