--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+    "name": "timetable",
     "private": true,
     "scripts": {
+        "deploy": "gh-pages -d public",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -32,6 +34,7 @@
         "vuex": "^3.4.0"
     },
     "dependencies": {
+        "gh-pages": "^3.1.0",
         "normalize-scss": "^7.0.1",
         "vue-burger-menu": "^2.0.5"
     }
