--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,5 @@ jobs:
       - run: npm ci
       - run: npm run dev
       - run:
-        name: php test
-        command: vendor/bin/phpunit
+        - name: php test
+        - command: vendor/bin/phpunit
