--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,4 @@ jobs:
       - run: composer install -n --prefer-dist
       - run: npm ci
       - run: npm run dev
-      - run:
-        - name: php test
-        - command: vendor/bin/phpunit
+      - run: vendor/bin/phpunit
