--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
+      - run: sudo composer self-update --1
       - restore_cache: 
           key: composer-v1-{{ checksum "composer.lock" }}
       - run: composer install -n --prefer-dist
